# hotspot

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  build-jonah.sh  build-with-wsl.sh  build_linux_ubuntu2004.sh  help  jkd.code-workspace
make/common/: JavaCompilation.gmk
make/data/lsrdata/: ._language-subtag-registry.txt
src/demo/share/java2d/J2DBench/resources/textdata/: arabic.ut8.txt  english.ut8.txt  greek.ut8.txt  hebrew.ut8.txt  (+4 more)
src/hotspot/cpu/x86/: interp_masm_x86.cpp
src/hotspot/cpu/x86/gc/shared/: barrierSetAssembler_x86.cpp
src/hotspot/os/posix/: os_posix.hpp  os_posix.inline.hpp  threadLocalStorage_posix.cpp
src/hotspot/share/c1/: c1_Runtime1.cpp
src/hotspot/share/interpreter/: interpreterRuntime.cpp
src/hotspot/share/jfr/metadata/: metadata.xsd
src/hotspot/share/memory/: allocation.cpp  allocation.hpp
src/hotspot/share/oops/: markWord.cpp  markWord.hpp
src/hotspot/share/prims/: jni.cpp  jvm.cpp
src/hotspot/share/runtime/: biasedLocking.cpp  globals.hpp  interfaceSupport.inline.hpp  mutexLocker.cpp  objectMonitor.cpp  objectMonitor.hpp  objectMonitor.inline.hpp  sharedRuntime.cpp  synchronizer.cpp  synchronizer.hpp  thread.cpp  thread.hpp  threadLocalStorage.hpp
src/hotspot/share/utilities/: defaultStream.hpp  exceptions.hpp  globalDefinitions.hpp  xmlstream.hpp
src/java.base/share/classes/java/lang/: Thread.java
src/java.base/share/native/launcher/: main.c
src/java.base/share/native/libjli/: java.c  java.h  jli_util.c
src/java.base/unix/native/libjli/: java_md_solinux.c
src/java.base/windows/native/libjli/: java_md.c
(+3 files in other folders)
